--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
-
    <head>
-      <title>yes</title>
+      <title>HTML Backgorund Color</title>
    </head>
-	
-   <body>
-      <p>yes?</p>
-      
-      <center>
-         <p>yes</p>
-      </center>
+   <body style="background-color:grey;">
+      <h1>Products</h1>
+      <p>We have developed more than 10 products till now.</p>
    </body>
-	
 </html>
