--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Backgorund Color</title>
+      <title>You're on the list</title>
    </head>
    <body style="background-color:black;">
       <h1>Products</h1>
