--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>You're on the list</title>
+      <title>uwu</title>
    </head>
    <body style="background-color:black;">
-      <h1>Products</h1>
-      <p>We have developed more than 10 products till now.</p>
+      <h1>time</h1>
+      <a href="https://www.instagram.com/mxson._k/">Your Link Text Here </a>
    </body>
 </html>
