--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>uwu</title>
-   </head>
-   <body style="background-color:black;">
-      <h1>time</h1>
-      <a href="https://www.instagram.com/mxson._k/">Your Link Text Here </a>
-   </body>
+  <head>
+    <meta charset="utf-8">
+    <title>My test page</title>
+  </head>
+	<center>
+	  <body>
+	  <h1>R.I.P.</h1>
+		<p>2015-2022</p>
+		<a href="https://libraryofbabel.info/random.cgi" title="library" target="_blank">?</a>
+		<img src="images/haeun.png" alt="R.I.P.">
+	  </body>
+	</center>
 </html>
