--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <h1>R.I.P.</h1>
 		<p>2015-2022</p>
 		<a href="https://libraryofbabel.info/random.cgi" title="library" target="_blank">?</a>
-		<img src="mek8035.github.io/haeun.png" alt="R.I.P.">
+		<img src="haeun.png" alt="R.I.P.">
 	  </body>
 	</center>
 </html>
