--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   </head>
 	<center>
 	  <body>
-	  <h1>R.I.P.</h1>
-		<p>2015-2022</p>
+	  <body style="background-color:grey;">
+	  <h1 style="color:red;">R.I.P.</h1>
+		<p style="color:white;">2015-2022</p>
 		<a href="https://libraryofbabel.info/random.cgi" title="library" target="_blank">?</a>
 		<img src="haeun.png" alt="R.I.P.">
 	  </body>
