--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	  <body>
 	  <body style="background-color:grey;">
 	  <h1 style="color:red;">R.I.P.</h1>
+	  <h2 style="color:white;">Ha-Eun</h2>
 		<p style="color:white;">2015-2022</p>
 		<a href="https://libraryofbabel.info/random.cgi" title="library" target="_blank">?</a>
 		<img src="haeun.png" alt="R.I.P.">
